--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>{{TITLE}}{{#if post}} — Ali’s Writeups{{/if}}</title>
-  <style>{{STYLE}}</style>
+  <title>{{title}}{{#if post}} — Ali’s Writeups{{/if}}</title>
+  <style>{{style}}</style>
 </head>
 <body>
-  {{CONTENT}}
+  {{content}}
 </body>
 </html>
